[package]
name = "exempi"
version = "2.5.1"
authors = ["Hubert Figuière <hub@figuiere.net>"]
license = "BSD-2-Clause"
keywords = ["deprecated"]
description = "Deprecated Safe Rust bindings to Exempi 2.4."
repository = "https://github.com/hfiguiere/exempi-rs"
homepage = "https://libopenraw.freedesktop.org/exempi/"

[dependencies]
bitflags = "0.5.0"
libc = "0.2"
exempi-sys = { path = "exempi-sys", version = "2.5.0" }
