[package]
name = "exempi2"
version = "0.2.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]
license = "BSD-2-Clause"
keywords = ["metadata", "tags", "xmp"]
description = "Safe Rust bindings to Exempi 2.4."
repository = "https://github.com/hfiguiere/exempi-rs"
homepage = "https://libopenraw.freedesktop.org/exempi/"
edition = "2018"
readme = "README.md"

[dependencies]
bitflags = "2.3.3"
libc = "0.2"
exempi-sys = { path = "exempi-sys", version = "^2.5.3" }
